@@ -12,7 +12,6 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Awaken extends PlaceholderExpansion {
     @Override
@@ -32,57 +31,59 @@ public class Awaken extends PlaceholderExpansion {
 
     @Override
     public @Nullable String onRequest(OfflinePlayer player, @NotNull String params) {
-        List<String> splitParams = Arrays.stream(params.split("_")).collect(Collectors.toList());
+        List<String> splitParams = Arrays.stream(params.split("_")).toList();
 
         PlayerData data = Main.fetchPlayer(player.getUniqueId());
 
-        switch (splitParams.get(0)){
+        switch (splitParams.get(0)) {
             case "state": {
                 String start = "";
-                if(data.isAlive()){
-                    if(splitParams.contains("colored")) start = ChatColor.GREEN+start;
+                if (data.isAlive()) {
+                    if (splitParams.contains("colored")) start = ChatColor.GREEN + start;
 
-                    return splitParams.contains("tick") ? start+"✔" : start+"Alive";
+                    return splitParams.contains("tick") ? start + "✔" : start + "Alive";
                 } else {
-                    if(splitParams.contains("colored")) start = ChatColor.RED+start;
+                    if (splitParams.contains("colored")) start = ChatColor.RED + start;
 
-                    return splitParams.contains("tick") ? start+"✖" : start+"Dead";
+                    return splitParams.contains("tick") ? start + "✖" : start + "Dead";
                 }
             }
-            case "team":{
+            case "team": {
                 TeamData teamData = Main.TEAM_DATA.get(data.getCurrentTeam());
-                if(teamData!=null)
-                return teamData.getName();
-                else return ChatColor.RED+"✖";
+                if (teamData != null)
+                    return teamData.getName();
+                else return ChatColor.RED + "✖";
             }
-            default:return "";
+            default:
+                return "";
         }
     }
 
     @Override
     public @Nullable String onPlaceholderRequest(Player player, @NotNull String params) {
-        List<String> splitParams = Arrays.stream(params.split("_")).collect(Collectors.toList());
+        List<String> splitParams = Arrays.stream(params.split("_")).toList();
 
         PlayerData data = Main.fetchPlayer(player.getUniqueId());
 
-        switch (splitParams.get(0)){
+        switch (splitParams.get(0)) {
             case "state": {
                 String start = "";
-                if(data.isAlive()){
-                    if(splitParams.contains("colored")) start = ChatColor.GREEN+start;
+                if (data.isAlive()) {
+                    if (splitParams.contains("colored")) start = ChatColor.GREEN + start;
 
-                    return splitParams.contains("tick") ? start+"✔" : start+"Alive";
+                    return splitParams.contains("tick") ? start + "✔" : start + "Alive";
                 } else {
-                    if(splitParams.contains("colored")) start = ChatColor.RED+start;
+                    if (splitParams.contains("colored")) start = ChatColor.RED + start;
 
-                    return splitParams.contains("tick") ? start+"✖" : start+"Dead";
+                    return splitParams.contains("tick") ? start + "✖" : start + "Dead";
                 }
             }
-            case "team":{
+            case "team": {
                 TeamData teamData = Main.TEAM_DATA.get(data.getCurrentTeam());
                 return teamData.getName();
             }
-            default: return "";
+            default:
+                return "";
         }
     }
 }
